--- a/README
+++ b/README
@@ -1,1 +1,2 @@
-This is the hello world example from the git tutorial.
+This is the Hello World example from the git tutorial.
+(changed in original)
